css/index.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background: #f9f9f9;
    color: #333;
}


header{
    background: #222;
    color: #ffffff;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    padding: 28px 32px;
}

nav a{
    text-decoration: none;
    color: #ffffff;
    font-weight: bold;
    margin-left: 4px;
}

section{
    margin-left: 36px;
    margin-right: 36px;
    max-width: 1000px;
}
section h2{
    margin-bottom: 20px;
    color: #222;
    font-size: 28px;

    margin-top: 20px;
}
#about{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 32px;
}

#about img{
    width: 45%;
    border-radius: 10px;
    object-fit: cover;
    max-height: 350px;
}
.aboutme{
    width: 50%;
}

